--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>index</title>
+<title>saavedra</title>
 <style type="text/css">
 .luisiana1 
 }
@@ -18,22 +18,50 @@
 	left: 0px;
 	top: 0px;
 }
+.foto {
+	list-style-image: url(ima.jpg);
+}
+.lu2 {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 18px;
+	background-image: url(banner.jpg);
+	background-repeat: no-repeat;
+	background-size:  100%;
+	height:800px;
+	width:100%;
+	left: 0px;
+}
+.TEXTOS {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 24px;
+	font-weight: bold;
+	color: #000;
+	text-decoration: none;
+}
 </style>
 </head>
 
 <body>
-<div class="luisiana1">
+ <div class="luisiana1">
   <div align="center">
     <table width="69%" border="0">
       <tr>
         <td width="49%" height="181"><p>&nbsp;</p>
         <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTwazgxh-2y0kzPerY-6eZOqVc94qjokve2rZ18Qg3rOdVpEGjQuUvz4YUkcjSM6NDSeA&usqp=CAU" alt="Grupo Saavedra" height="90"/></p></td>
-        <td width="11%">Productos </td>
-        <td width="12%">Promocion</td>
-        <td width="28%">Ubicacion</td>
+        <td width="11%"><a href="productos.html" class="TEXTOS">Productos </a></td>
+        <td width="12%"><a href="promocion.html" class="TEXTOS">Promocion</a></td>
+        <td width="28%"><a href="ubicacion.html" class="TEXTOS">Ubicacion</a></td>
+        <td width="14%"><a href="https://www.facebook.com/GRUPOSAAVEDRAS/?locale=es_LA"><img src="FACE.png" width="36" height="38"></a></td>
+        <td width="14%">&nbsp;</td>
       </tr>
     </table>
+    <p>&nbsp;</p>
   </div>
 </div>
+<div class="foto">
+  <div align="center"></div>
+</div>
+<div class="lu2"></div>
+<p>&nbsp;</p>
 </body>
 </html>
