--- a/productos.html
+++ b/productos.html
@@ -83,10 +83,10 @@ transform: scale(1.02);
 <div align="center">
   <table width="80%" border="0">
     <tbody><tr>
-      <td class="imagen-brillante"><div align="center"><img src="./saavedra_files/gs.jpg" alt="" width="250" height="241" class="imagen-brillante"></div></td>                         
-      <td class="imagen-brillante"><div align="center"><img src="./saavedra_files/rady.jpg" alt="" width="250" height="200" class="imagen-brillante"></div></td>
-      <td class="imagen-brillante"><div align="center"><img src="./saavedra_files/mof.jpg" alt="" width="250" height="192" class="imagen-brillante"></div></td>
-      <td class="imagen-brillante"><div align="center"><img src="./saavedra_files/mangueras.jpg" alt="" width="250" height="190" class="imagen-brillante"></div></td>
+      <td class="imagen-brillante"><div align="center"><img src="saavedra_files/gs.jpg" alt="" width="250" height="241" class="imagen-brillante"></div></td>                         
+      <td class="imagen-brillante"><div align="center"><img src="saavedra_files/rady.jpg" alt="" width="250" height="200" class="imagen-brillante"></div></td>
+      <td class="imagen-brillante"><div align="center"><img src="saavedra_files/mof.jpg" alt="" width="250" height="192" class="imagen-brillante"></div></td>
+      <td class="imagen-brillante"><div align="center"><img src="saavedra_files/mangueras.jpg" alt="" width="250" height="190" class="imagen-brillante"></div></td>
     </tr>
   </tbody></table>
 <table width="82%" height="155" border="0">
@@ -119,9 +119,9 @@ transform: scale(1.02);
 <table width="80%" border="0">
   <tbody><tr>
     <td class="imagen-brillante"="25%"><div align="center"><img src="./saavedra_files/agricola.jpg" width="208" height="259"></div></td>
-    <td class="imagen-brillante"="24%"><img src="./saavedra_files/fallas.jpg" width="334" height="226"></td>
-    <td class="imagen-brillante"="25%"><img src="./saavedra_files/rd.jpg" width="322" height="227"></td>
-    <td class="imagen-brillante"="26%"><img src="./saavedra_files/sistema.jpg" width="316" height="248"></td>
+    <td class="imagen-brillante"="24%"><img src="saavedra_files/fallas.jpg" width="334" height="226"></td>
+    <td class="imagen-brillante"="25%"><img src="saavedra_files/rd.jpg" width="322" height="227"></td>
+    <td class="imagen-brillante"="26%"><img src="saavedra_files/sistema.jpg" width="316" height="248"></td>
   </tr>
   <tr>
     <td><div align="center"><span data-huuid="4669857133431621364">Un radiador agrícola es un&nbsp;componente vital en el sistema de refrigeración de tractores y otras maquinarias agrícolas.&nbsp;</span><span data-huuid="4669857133431621145">Su función principal es disipar el calor generado por el motor, previniendo el sobrecalentamiento y asegurando un rendimiento óptimo de la máquina.<span jscontroller="JHnpme" data-cid="d47ea769-5c12-45d4-9af5-c8ae6a5c54ef" jsaction="rcuQ6b:npT2md">&nbsp;</span></span></div></td>
