--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
 	color: #000;
 	text-decoration: none;
 }
+.hover-sombra {
+ 	font-family: Arial, Helvetica, sans-serif;
+	font-size: 24px;
+	font-weight: bold;
+	color: #000;
+	text-decoration: none;
+	color: #2c3e50;
+	transition: all 0.3s ease;
+	text-shadow: 0 0 0px rgba(0,0,0,0);
+}
+.hover-sombra:hover {
+ color: #e74c3c;
+ text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+ transform: translateY(-2px);
+}
 </style>
 </head>
 
@@ -48,9 +63,9 @@
       <tr>
         <td width="49%" height="181"><p>&nbsp;</p>
         <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTwazgxh-2y0kzPerY-6eZOqVc94qjokve2rZ18Qg3rOdVpEGjQuUvz4YUkcjSM6NDSeA&usqp=CAU" alt="Grupo Saavedra" height="90"/></p></td>
-        <td width="11%"><a href="productos.html" class="TEXTOS">Productos </a></td>
-        <td width="12%"><a href="promocion.html" class="TEXTOS">Promocion</a></td>
-        <td width="28%"><a href="ubicacion.html" class="TEXTOS">Ubicacion</a></td>
+        <td width="11%"><a href="productos.html" class="hover-sombra">Productos </a></td>
+        <td width="12%"><a href="promocion.html" class="hover-sombra">Promocion</a></td>
+        <td width="28%"><a href="ubicacion.html" class="hover-sombra">Ubicacion</a></td>
         <td width="14%"><a href="https://www.facebook.com/GRUPOSAAVEDRAS/?locale=es_LA"><img src="FACE.png" width="36" height="38"></a></td>
         <td width="14%">&nbsp;</td>
       </tr>
