--- a/ubicacion.html
+++ b/ubicacion.html
@@ -4,8 +4,7 @@
 
 <title>saavedra</title>
 <style type="text/css">
-.luisiana1 
-}
+
 .luisiana1 {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
@@ -48,6 +47,24 @@ transform: scale(1.02);
 	color: #000;
 	text-decoration: none;
 }
+.hover-sombra {
+ 	font-family: Arial, Helvetica, sans-serif;
+	font-size: 24px;
+	font-weight: bold;
+	color: #000;
+	text-decoration: none;
+	color: #2c3e50;
+	transition: all 0.3s ease;
+	text-shadow: 0 0 0px rgba(0,0,0,0);
+}
+.hover-sombra:hover {
+ color: #e74c3c;
+ text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+ transform: translateY(-2px);
+}
+.top {
+	margin-top:200px;
+}
 </style>
 </head>
 
@@ -58,9 +75,9 @@ transform: scale(1.02);
       <tbody><tr>
         <td width="49%" height="181"><p>&nbsp;</p>
         <p><a href="index.html"><img src="./saavedra_files/images" alt="Grupo Saavedra" height="90"></a></p></td>
-        <td width="11%"><a href="productos.html" class="TEXTOS">Productos </a></td>
-        <td width="12%"><a href="promocion.html" class="TEXTOS">Promocion</a></td>
-        <td width="28%"><a href="ubicacion.html" class="TEXTOS">Ubicacion</a></td>
+        <td width="11%"><a href="productos.html" class="hover-sombra">Productos </a></td>
+        <td width="12%"><a href="promocion.html" class="hover-sombra">Promocion</a></td>
+        <td width="28%"><a href="ubicacion.html" class="hover-sombra">Ubicacion</a></td>
         <td width="14%"><a href="https://www.facebook.com/GRUPOSAAVEDRAS/?locale=es_LA"><img src="./saavedra_files/FACE.png" width="36" height="38"></a></td>
         <td width="14%">&nbsp;</td>
       </tr>
@@ -71,7 +88,7 @@ transform: scale(1.02);
 <div class="foto">
   <div align="center"></div>
 </div>
-<div align="center">
+<div class="top" align="center">
 
 <title>Documento sin título</title>
 <p>&nbsp; </p>
